www/css/style.css
/* Empty. Add your own CSS if you like */
.days {
  margin: 2em 2em;
}

div.title {
  width: 100%;
  height: auto;
}

.tabs.tabs-secondary.modals a.tab-item {
  font-size: 1em;
}

.sectionTitle {
  text-align: center;
  font-size: 1.5em;
  padding: 10px;
}

marked h1 {
  font-size: 1.6em;
}

marked h1 {
  font-size: 1.4em;
}

marked h3 {
  font-size: 1.2em;
}

/* Github Markdown CSS */

marked code {
  padding: 0;
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(0,0,0,0.04);
  border-radius: 3px;
}

marked code:before,
marked code:after {
  letter-spacing: -0.2em;
  content: "\00a0";
}

marked pre>code {
  padding: 0;
  margin: 0;
  font-size: 100%;
  word-break: normal;
  white-space: pre;
  background: transparent;
  border: 0;
}

marked .highlight {
  margin-bottom: 16px;
}

marked .highlight pre,
marked pre {
  padding: 16px;
  overflow: auto;
  font-size: 85%;
  line-height: 1.45;
  background-color: #f7f7f7;
  border-radius: 3px;
}

marked .highlight pre {
  margin-bottom: 0;
  word-break: normal;
}

marked pre {
  word-wrap: normal;
}

marked pre code {
  display: inline;
  max-width: initial;
  padding: 0;
  margin: 0;
  overflow: initial;
  line-height: inherit;
  background-color: transparent;
  border: 0;
}

marked pre code:before,
marked pre code:after {
  content: normal;
}

marked kbd {
  display: inline-block;
  padding: 3px 5px;
  font-size: 11px;
  line-height: 10px;
  color: #555;
  vertical-align: middle;
  background-color: #fcfcfc;
  border: solid 1px #ccc;
  border-bottom-color: #bbb;
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 #bbb;
}

marked .pl-c {
  color: #969896;
}

marked .pl-c1,
marked .pl-s .pl-v {
  color: #0086b3;
}

marked .pl-e,
marked .pl-en {
  color: #795da3;
}

marked .pl-s .pl-s1,
marked .pl-smi {
  color: #333;
}

marked .pl-ent {
  color: #63a35c;
}

marked .pl-k {
  color: #a71d5d;
}

marked .pl-pds,
marked .pl-s,
marked .pl-s .pl-pse .pl-s1,
marked .pl-sr,
marked .pl-sr .pl-cce,
marked .pl-sr .pl-sra,
marked .pl-sr .pl-sre {
  color: #183691;
}

marked .pl-v {
  color: #ed6a43;
}

marked .pl-id {
  color: #b52a1d;
}

marked .pl-ii {
  background-color: #b52a1d;
  color: #f8f8f8;
}

marked .pl-sr .pl-cce {
  color: #63a35c;
  font-weight: bold;
}

marked .pl-ml {
  color: #693a17;
}

marked .pl-mh,
marked .pl-mh .pl-en,
marked .pl-ms {
  color: #1d3e81;
  font-weight: bold;
}

marked .pl-mq {
  color: #008080;
}

marked .pl-mi {
  color: #333;
  font-style: italic;
}

marked .pl-mb {
  color: #333;
  font-weight: bold;
}

marked .pl-md {
  background-color: #ffecec;
  color: #bd2c00;
}

marked .pl-mi1 {
  background-color: #eaffea;
  color: #55a532;
}

marked .pl-mdr {
  color: #795da3;
  font-weight: bold;
}

marked .pl-mo {
  color: #1d3e81;
}

marked kbd {
  display: inline-block;
  padding: 3px 5px;
  font: 11px Consolas, "Liberation Mono", Menlo, Courier, monospace;
  line-height: 10px;
  color: #555;
  vertical-align: middle;
  background-color: #fcfcfc;
  border: solid 1px #ccc;
  border-bottom-color: #bbb;
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 #bbb;
}

/**
 * yue.css
 *
 * yue.css is designed for readable content.
 *
 * Copyright (c) 2013 - 2014 by Hsiaoming Yang.
 */

body {
  font-family: "Georgia", "Xin Gothic", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei", sans-serif;
  color: #444443;
}


marked h1,
marked h2,
marked h3,
marked h4,
marked h5,
marked h6,
marked h1,
marked h2,
marked h3,
marked h4,
marked h5,
marked h6 {
  font-family: "Georgia", "Xin Gothic", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei", "SimSun", sans-serif;
  color: #222223;
  -webkit-user-select: auto;
}

marked h1 {
  font-size: 1.8em;
  margin: 0.67em 0;
}

marked h1,
marked > h1 {
  margin-top: 0;
  font-size: 2em;
}

marked h2,
marked h2 {
  font-size: 1.5em;
  margin: 0.83em 0;
}

marked h3,
marked h3 {
  font-size: 1.17em;
  margin: 1em 0;
}

marked h4,
marked h5,
marked h6,
marked h4,
marked h5,
marked h6 {
  font-size: 1em;
  margin: 1.6em 0 1em 0;
}

marked h6 {
  font-weight: 500;
}

marked p,
marked p {
  font-size: 1em;
  margin-top: 0;
  margin-bottom: 1.46em;
  -webkit-user-select: auto;
}

marked a {
  color: #111;
  word-wrap: break-word;
  -moz-text-decoration-color: rgba(0, 0, 0, 0.4);
  text-decoration-color: rgba(0, 0, 0, 0.4);
}

marked a:hover {
  color: #555;
  -moz-text-decoration-color: rgba(0, 0, 0, 0.6);
  text-decoration-color: rgba(0, 0, 0, 0.6);
}

marked h1 a,
marked h2 a,
marked h3 a {
  text-decoration: none;
}

marked strong,
marked b {
  font-weight: 700;
  color: #222223;
}

marked em,
marked i {
  font-style: italic;
  color: #222223;
}

marked img {
  max-width: 100%;
  height: auto;
  margin: 0.2em 0;
}

marked a img {
  /* Remove border on IE */
  border: none;
}

marked figure {
  position: relative;
  clear: both;
  outline: 0;
  margin: 10px 0 30px;
  padding: 0;
  min-height: 100px;
}

marked figure img {
  display: block;
  max-width: 100%;
  margin: auto auto 4px;
  box-sizing: border-box;
}

marked figure figcaption {
  position: relative;
  width: 100%;
  text-align: center;
  left: 0;
  margin-top: 10px;
  font-weight: 400;
  font-size: 14px;
  color: #666665;
}

marked figure figcaption a {
  text-decoration: none;
  color: #666665;
}

marked hr {
  display: block;
  width: 14%;
  margin: 40px auto 34px;
  border: 0 none;
  border-top: 3px solid #dededc;
}

marked blockquote {
  margin: 0 0 1.64em 0;
  border-left: 3px solid #dadada;
  padding-left: 12px;
  color: #666664;
}

marked blockquote a {
  color: #666664;
}

marked ul,
marked ol {
  margin: 0 0 24px 6px;
  padding-left: 16px;
}

marked ul {
  list-style-type: square;
}

marked ol {
  list-style-type: decimal;
}

marked li {
  margin-bottom: 0.2em;
}

marked li ul,
marked li ol {
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 14px;
}

marked li ul {
  list-style-type: disc;
}

marked li ul ul {
  list-style-type: circle;
}

marked li p {
  margin: 0.4em 0 0.6em;
}

marked .unstyled {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

marked code,
marked tt {
  color: #808080;
  background-color: #f9f9f7;
  padding: 1px 2px;
  border: 1px solid #dadada;
  border-radius: 3px;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  word-wrap: break-word;
}

marked pre {
  margin: 1.64em 0;
  padding: 7px;
  border: none;
  border-left: 3px solid #dadada;
  padding-left: 10px;
  overflow: auto;
  line-height: 1.5;
  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
  color: #4c4c4c;
  background-color: #f9f9f7;
}

marked pre code,
marked pre tt {
  color: #4c4c4c;
  border: none;
  background: none;
  padding: 0;
}

marked table {
  width: 100%;
  max-width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
  margin-bottom: 1.5em;
  font-size: 0.96em;
  box-sizing: border-box;
}

marked th,
marked td {
  text-align: left;
  padding: 4px 8px 4px 10px;
  border: 1px solid #dadada;
}

marked td {
  vertical-align: top;
}

marked tr:nth-child(even) {
  background-color: #efefee;
}

marked iframe {
  display: block;
  max-width: 100%;
  margin-bottom: 30px;
}

marked figure iframe {
  margin: auto;
}

marked table pre {
  margin: 0;
  padding: 0;
  border: none;
  background: none;
}

@media (min-width: 1100px) {
  marked blockquote {
    margin-left: -24px;
    padding-left: 20px;
    border-width: 4px;
  }

  marked blockquote blockquote {
    margin-left: 0;
  }
}

marked h2 {
  text-align: center;
}

.selfIntro p {
  margin: 1em;
  font-size: 1.2em;
}

